<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sorting">Sorting</string>
    <string-array name="pref_sorting_titles">
        <item>@string/pref_titles_popular</item>
        <item>@string/pref_titles_rated</item>
    </string-array>
    <string-array name="pref_sorting_values">
        <item>@string/pref_values_popular</item>
        <item>@string/pref_values_rated</item>
    </string-array>
    <string name="pref_titles_popular">Most Popular</string>
    <string name="pref_titles_rated">Highest Rated</string>
    <string name="pref_titles_now_playing">Now Playing</string>
    <string name="pref_titles_upcoming">Upcoming</string>

    <string name="pref_values_popular">popular</string>
    <string name="pref_values_rated">top_rated</string>
    <string name="pref_values_now_playing">now_playing</string>
    <string name="pref_values_upcoming">upcoming</string>

    <string name="pref_sorting_key">popular movies</string>
    <string name="pref_sorting_default">@string/pref_values_popular</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Favorites">Favorites</string>
</resources>
